// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App - dark/light themes set 1`] = `
<main>
  <div
    className=""
  >
    <div>
      <div
        className="loader"
        style={
          Object {
            "visibility": "visible",
            "zIndex": -1,
          }
        }
      />
      <div
        style={
          Object {
            "cursor": "grab",
            "height": "768px",
            "position": "relative",
            "width": "1024px",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "height": "100%",
                "overflow": "hidden",
                "position": "absolute",
                "visibility": "inherit",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="side-panel-container"
        style={
          Object {
            "marginLeft": 0,
          }
        }
      >
        <div
          className="side-panel"
          style={
            Object {
              "background": "#242730",
              "color": "white",
            }
          }
        >
          <div
            className="side-pane-header"
            style={
              Object {
                "background": "#29323C",
                "marginTop": 2,
              }
            }
          >
            <h2>
              Nothing to show
            </h2>
          </div>
          <div>
            <button
              className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj bk"
              data-baseweb="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              Add data
            </button>
            <i
              className="fa fa-save"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "1.5em",
                  "margin": 5,
                }
              }
            />
          </div>
          <div
            className="side-panel-body"
          >
            <div
              className="side-panel-body-content"
            >
              <br />
              <hr
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
              <div
                className="bl"
              >
                <div
                  aria-orientation="horizontal"
                  className="bm bn bo af bp bq br bs bt bu"
                  data-baseweb="tab-list"
                  role="tablist"
                >
                  <button
                    aria-controls="tabs-bui1-tabpanel-0"
                    aria-selected={true}
                    className="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap bh c0 au av aw aq c1 ay c2 c3 c4 b5 b6 b7 b8 ah"
                    data-baseweb="tab"
                    disabled={false}
                    id="tabs-bui1-tab-0"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex="0"
                    type="button"
                  >
                    <i
                      className="fa fa-info"
                      style={
                        Object {
                          "fontSize": "2rem",
                        }
                      }
                    />
                  </button>
                  <button
                    aria-controls="tabs-bui1-tabpanel-1"
                    aria-selected={false}
                    className="ax at b1 b3 b2 b4 bv ae ag bw bx by bz ai aj ak al am an ao ap bh c0 au av aw aq c1 ay c2 c3 c4 b5 b6 b7 b8 ah"
                    data-baseweb="tab"
                    disabled={false}
                    id="tabs-bui1-tab-1"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    role="tab"
                    tabIndex="-1"
                    type="button"
                  >
                    <i
                      className="fa fa-sliders"
                      style={
                        Object {
                          "fontSize": "2rem",
                        }
                      }
                    />
                  </button>
                  <div
                    aria-hidden="true"
                    className="c5 c6 c7 c8 c9 ca cb cc"
                    data-baseweb="tab-highlight"
                    role="presentation"
                  />
                </div>
                <div
                  aria-hidden="true"
                  className="bi bm ca"
                  data-baseweb="tab-border"
                  role="presentation"
                />
                <div
                  aria-labelledby="tabs-bui1-tab-0"
                  className="cd aq"
                  data-baseweb="tab-panel"
                  hidden={false}
                  id="tabs-bui1-tabpanel-0"
                  role="tabpanel"
                >
                  <div
                    className="side-panel-group"
                    style={
                      Object {
                        "borderColor": "#29323C",
                      }
                    }
                  />
                </div>
                <div
                  aria-labelledby="tabs-bui1-tab-1"
                  className="cd aq"
                  data-baseweb="tab-panel"
                  hidden={true}
                  id="tabs-bui1-tabpanel-1"
                  role="tabpanel"
                />
              </div>
            </div>
            <div
              className="space"
            />
            <form
              className="search-form"
              onSubmit={[Function]}
            >
              <div
                className="ce cf"
                data-baseweb="form-control-container"
              >
                <div
                  className="bv bn cg ce ch ci cj ck cl cm cn co cp av cq bb bc b9 ba b5 cr cs ct cu cv cw cx cy cz d0"
                  data-baseweb="input"
                >
                  <div
                    className="bn ce d1 av cq b5 cr cs ct bh cy"
                    data-baseweb="base-input"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-autocomplete={null}
                      aria-controls={null}
                      aria-describedby={null}
                      aria-errormessage={null}
                      aria-haspopup={null}
                      aria-invalid={false}
                      aria-label={null}
                      aria-labelledby={null}
                      aria-required={false}
                      autoComplete="on"
                      className="bv d2 ai ak aj al am ao an ap aq ce d3 d4 d5 d6 bd be d7 d0 b5 cr cs ct bh d8 d9"
                      disabled={false}
                      id="search-nominatum"
                      inputMode="text"
                      name=""
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onKeyUp={[Function]}
                      pattern={null}
                      placeholder="fly to ..."
                      required={false}
                      role={null}
                      rows={null}
                      type="text"
                    />
                  </div>
                  <div
                    className="bn ag ah da av cq b5 cr cs ct db dc bh cy"
                  >
                    🌐
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          className="close-button"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#242730",
              }
            }
          >
            <i
              className="fa fa-arrow-circle-left"
              style={
                Object {
                  "color": "white !important",
                  "fontSize": "2rem",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  />
</main>
`;

exports[`App - dark/light themes set 2`] = `
<main>
  <div
    className=""
  >
    <div>
      <div
        className="loader"
        style={
          Object {
            "visibility": "visible",
            "zIndex": -1,
          }
        }
      />
      <div
        style={
          Object {
            "cursor": "grab",
            "height": "768px",
            "position": "relative",
            "width": "1024px",
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "height": "100%",
                "overflow": "hidden",
                "position": "absolute",
                "visibility": "inherit",
                "width": "100%",
              }
            }
          />
          <div
            style={
              Object {
                "height": 0,
                "overflow": "visible",
                "width": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="side-panel-container"
        style={
          Object {
            "marginLeft": 0,
          }
        }
      >
        <div
          className="side-panel"
          style={
            Object {
              "background": "white",
              "color": "black",
            }
          }
        >
          <div
            className="side-pane-header"
            style={
              Object {
                "background": "#eee",
                "marginTop": 2,
              }
            }
          >
            <h2>
              Nothing to show
            </h2>
          </div>
          <div>
            <button
              className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay da db b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg dc dd de df"
              data-baseweb="button"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
            >
              Add data
            </button>
            <i
              className="fa fa-save"
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "fontSize": "1.5em",
                  "margin": 5,
                }
              }
            />
          </div>
          <div
            className="side-panel-body"
          >
            <div
              className="side-panel-body-content"
            >
              <br />
              <hr
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
              <div
                id="main-tabs"
              >
                <ul
                  className="nav nav-tabs"
                  role="tablist"
                >
                  <li
                    className="active"
                    role="presentation"
                  >
                    <a
                      aria-controls="main-tabs-pane-1"
                      aria-selected={true}
                      href="#"
                      id="main-tabs-tab-1"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                    >
                      <i
                        className="fa fa-info"
                        style={
                          Object {
                            "fontSize": "2rem",
                          }
                        }
                      />
                    </a>
                  </li>
                  <li
                    className=""
                    role="presentation"
                  >
                    <a
                      aria-controls="main-tabs-pane-2"
                      aria-selected={false}
                      href="#"
                      id="main-tabs-tab-2"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="tab"
                      tabIndex={-1}
                    >
                      <i
                        className="fa fa-sliders"
                        style={
                          Object {
                            "fontSize": "2rem",
                          }
                        }
                      />
                    </a>
                  </li>
                </ul>
                <div
                  className="tab-content"
                >
                  <div
                    aria-hidden={false}
                    aria-labelledby="main-tabs-tab-1"
                    className="fade tab-pane active in"
                    id="main-tabs-pane-1"
                    role="tabpanel"
                  >
                    <div
                      className="side-panel-group"
                      style={
                        Object {
                          "borderColor": "#eee",
                        }
                      }
                    />
                  </div>
                  <div
                    aria-hidden={true}
                    aria-labelledby="main-tabs-tab-2"
                    className="fade tab-pane"
                    id="main-tabs-pane-2"
                    role="tabpanel"
                  >
                    <div
                      className="side-pane-header"
                      style={
                        Object {
                          "background": "#eee",
                          "marginTop": 2,
                        }
                      }
                    >
                      Map Styles
                      <br />
                      <div
                        aria-controls={null}
                        aria-expanded="false"
                        aria-haspopup="true"
                        className="b5 bl bm bn bo bp bq"
                        data-baseweb="select"
                        onBlur={[Function]}
                        onClick={[Function]}
                      >
                        <div
                          className="bb b9 ba bc bo br bq bs bt bu bv bw bx by bz c0 c1 c2 c3 av c4 dc dg dh di dj dd"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onTouchEnd={[Function]}
                          onTouchMove={[Function]}
                          onTouchStart={[Function]}
                        >
                          <div
                            className="bs ca dc cb cc ax cd ce cf ag"
                          >
                            <svg
                              className="cg ca ch ci cc"
                              data-baseweb="icon"
                              title="search"
                              viewBox="0 0 24 24"
                            >
                              <title>
                                search
                              </title>
                              <path
                                clipRule="evenodd"
                                d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
                                fillRule="evenodd"
                              />
                            </svg>
                          </div>
                          <div
                            className="bo bp cj ck cl bs ag cm br bd be cn co"
                          >
                            <div
                              className="bp cg cp cq am an ao ap ar bo aq b2 b4 b1 b3 cr cs ct co cu cv"
                            >
                              <input
                                aria-activedescendant={null}
                                aria-autocomplete="list"
                                aria-controls={null}
                                aria-describedby={null}
                                aria-disabled={null}
                                aria-errormessage={null}
                                aria-expanded={false}
                                aria-haspopup="listbox"
                                aria-label=""
                                aria-labelledby={null}
                                aria-required={null}
                                className="b5 bl bm bn dc cw cx cp cy am an ao ap ar cg aq b2 b4 b1 b3 cr cs ct co"
                                disabled={null}
                                id={null}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={null}
                                role="combobox"
                                tabIndex={0}
                                value=""
                              />
                              <div
                                className="b5 bl bm bn cd ce cz d0 d1 d2 d3"
                              >
                                
                              </div>
                            </div>
                            <div
                              className="d4 cp br d5 d6"
                            >
                              Default(streets)
                            </div>
                          </div>
                          <div
                            className="bo bp bs d7 ag d8 bg"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="space"
            />
            <form
              className="search-form"
              onSubmit={[Function]}
            >
              <div
                className="form-group"
              >
                <span
                  className="input-group"
                >
                  <input
                    className="form-control"
                    onChange={[Function]}
                    placeholder="fly to..."
                    style={
                      Object {
                        "background": "white",
                        "color": "black",
                      }
                    }
                    type="text"
                  />
                  <span
                    className="input-group-addon"
                    style={
                      Object {
                        "background": "white",
                        "color": "black",
                      }
                    }
                  >
                    <span
                      className="glyphicon glyphicon-search"
                    />
                  </span>
                </span>
              </div>
            </form>
          </div>
        </div>
        <div
          className="close-button"
          onClick={[Function]}
          style={
            Object {
              "color": "white",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#242730",
              }
            }
          >
            <i
              className="fa fa-arrow-circle-left"
              style={
                Object {
                  "color": "white !important",
                  "fontSize": "2rem",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  />
</main>
`;
